@@ -1,5 +1,8 @@
 2002-07-08  James Henstridge  <james@daa.com.au>
 
+	* codegen/docextract.py (parse_tmpl): fix up simple loading of
+	tmpl files.
+
 	* pygobject.c (pygobject_connect): apply another memory leak fix
 	from Arjan (from bug #87413).
 	(pygobject_connect_after): equivalent fix here.
